--- a/package.json
+++ b/package.json
@@ -8,15 +8,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "date-fns": "^1.29.0",
+    "firebase": "^5.3.1",
+    "kanbasu": "^2.2.1",
+    "lodash": "^4.17.10",
     "vue": "^2.5.17",
+    "vue-notification": "^1.3.13",
     "vue-router": "^3.0.1",
+    "vuefire": "^2.0.0-alpha.15",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-rc.12",
     "@vue/cli-plugin-eslint": "^3.0.0-rc.12",
     "@vue/cli-service": "^3.0.0-rc.12",
-    "@vue/eslint-config-prettier": "^3.0.0-rc.12",
+    "@vue/eslint-config-prettier": "^3.0.1",
+    "babel-plugin-lodash": "^3.3.4",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.17"
