--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.5.17",
     "vue-notification": "^1.3.13",
     "vue-router": "^3.0.1",
+    "vue-svg-component-runtime": "^1.0.1",
     "vuefire": "^2.0.0-alpha.15",
     "vuex": "^3.0.1"
   },
@@ -27,6 +28,7 @@
     "babel-plugin-lodash": "^3.3.4",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
+    "vue-svg-icon-loader": "^2.1.1",
     "vue-template-compiler": "^2.5.17"
   }
 }
