--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 node_modules
 /dist
+/.firebase
 
 # local env files
 .env.local
@@ -10,6 +11,7 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+firebase-debug.log
 
 # Editor directories and files
 .idea
@@ -19,4 +21,3 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw*
-/.firebase
