--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "deploy": "firebase deploy"
+    "deploy": "firebase deploy",
+    "start": "vue-cli-service serve",
+    "test:unit": "vue-cli-service test:unit",
+    "test": "npm run test:unit"
   },
   "dependencies": {
     "date-fns": "^1.29.0",
-    "firebase": "^5.3.1",
+    "firebase": "^5.5.4",
     "kanbasu": "^2.2.1",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
     "vue": "^2.5.17",
     "vue-notification": "^1.3.13",
     "vue-router": "^3.0.1",
@@ -21,12 +23,17 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-rc.12",
-    "@vue/cli-plugin-eslint": "^3.0.0-rc.12",
-    "@vue/cli-service": "^3.0.0-rc.12",
-    "@vue/eslint-config-prettier": "^3.0.1",
+    "@vue/cli-plugin-babel": "^3.0.5",
+    "@vue/cli-plugin-eslint": "^3.0.5",
+    "@vue/cli-plugin-unit-jest": "^3.0.5",
+    "@vue/cli-service": "^3.0.5",
+    "@vue/eslint-config-prettier": "^3.0.5",
+    "@vue/test-utils": "^1.0.0-beta.20",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "^23.0.1",
     "babel-plugin-lodash": "^3.3.4",
     "node-sass": "^4.9.0",
+    "prettier": "^1.14.3",
     "sass-loader": "^7.0.1",
     "vue-svg-icon-loader": "^2.1.1",
     "vue-template-compiler": "^2.5.17"
