--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "kanbasu": "^2.2.1",
     "lodash": "^4.17.11",
     "vue": "^2.5.17",
+    "vue-clickaway": "^2.2.2",
     "vue-notification": "^1.3.13",
     "vue-router": "^3.0.1",
     "vue-svg-component-runtime": "^1.0.1",
