--- a/package.json
+++ b/package.json
@@ -11,32 +11,37 @@
     "test": "npm run test:unit"
   },
   "dependencies": {
-    "date-fns": "^1.29.0",
-    "firebase": "^5.5.4",
-    "kanbasu": "^2.2.1",
-    "lodash": "^4.17.11",
-    "vue": "^2.5.17",
+    "date-fns": "^2.8.1",
+    "firebase": "^7.5.0",
+    "kanbasu": "^2.5.0",
+    "lodash": "^4.17.15",
+    "vue": "^2.6.10",
     "vue-clickaway": "^2.2.2",
-    "vue-notification": "^1.3.13",
-    "vue-router": "^3.0.1",
+    "vue-notification": "^1.3.20",
+    "vue-router": "^3.1.3",
     "vue-svg-component-runtime": "^1.0.1",
-    "vuefire": "^2.0.0-alpha.15",
-    "vuex": "^3.0.1"
+    "vuefire": "^2.2.0",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.5",
-    "@vue/cli-plugin-eslint": "^3.0.5",
-    "@vue/cli-plugin-unit-jest": "^3.0.5",
-    "@vue/cli-service": "^3.0.5",
-    "@vue/eslint-config-prettier": "^3.0.5",
+    "@vue/cli-plugin-babel": "^4.0.5",
+    "@vue/cli-plugin-eslint": "^4.0.5",
+    "@vue/cli-plugin-unit-jest": "^4.0.5",
+    "@vue/cli-service": "^4.0.5",
+    "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^23.0.1",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
     "babel-plugin-lodash": "^3.3.4",
-    "node-sass": "^4.9.0",
-    "prettier": "^1.14.3",
-    "sass-loader": "^7.0.1",
+    "core-js": "^3.4.4",
+    "eslint": "^6.7.1",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-vue": "^6.0.1",
+    "node-sass": "^4.13.0",
+    "prettier": "^1.19.1",
+    "sass-loader": "^8.0.0",
     "vue-svg-icon-loader": "^2.1.1",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.6.10"
   }
 }
