--- a/functions/package.json
+++ b/functions/package.json
@@ -9,8 +9,11 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.0.3"
+    "firebase-admin": "~8.8.0",
+    "firebase-functions": "^3.3.0"
   },
-  "private": true
+  "private": true,
+  "engines": {
+    "node": "10"
+  }
 }
